lab3/matrix_yacc/parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     instructions_opt -> instructions
Rule 3     instructions_opt -> <empty>
Rule 4     instructions -> instructions instruction
Rule 5     instructions -> instruction
Rule 6     instruction -> assignment_instruction
Rule 7     instruction -> conditional_instruction
Rule 8     instruction -> compound_instruction
Rule 9     instruction -> print_instruction
Rule 10    instruction -> iteration_instruction
Rule 11    instruction -> jump_instruction
Rule 12    assignment_instruction -> unary_expr = expr ;
Rule 13    assignment_instruction -> unary_expr ADDASSIGN expr ;
Rule 14    assignment_instruction -> unary_expr SUBASSIGN expr ;
Rule 15    assignment_instruction -> unary_expr MULASSIGN expr ;
Rule 16    assignment_instruction -> unary_expr DIVASSIGN expr ;
Rule 17    conditional_instruction -> IF ( expr ) instruction
Rule 18    conditional_instruction -> IF ( expr ) instruction ELSE instruction
Rule 19    compound_instruction -> { }
Rule 20    compound_instruction -> { instructions }
Rule 21    print_instruction -> PRINT expr ;
Rule 22    iteration_instruction -> WHILE ( expr ) instruction
Rule 23    iteration_instruction -> WHILE ( expr ) { instruction
Rule 24    iteration_instruction -> FOR iterator_assignment instruction
Rule 25    jump_instruction -> BREAK ;
Rule 26    jump_instruction -> CONTINUE ;
Rule 27    jump_instruction -> RETURN ;
Rule 28    primary_expr -> ID
Rule 29    primary_expr -> INTNUM
Rule 30    primary_expr -> FLOATNUM
Rule 31    primary_expr -> STRING
Rule 32    primary_expr -> matrix
Rule 33    primary_expr -> ( expr )
Rule 34    postfix_expr -> primary_expr
Rule 35    postfix_expr -> postfix_expr [ expr ]
Rule 36    postfix_expr -> postfix_expr SINGLE_QUOTE
Rule 37    unary_expr -> postfix_expr
Rule 38    unary_expr -> - multiplicative_expr
Rule 39    multiplicative_expr -> unary_expr
Rule 40    multiplicative_expr -> multiplicative_expr * unary_expr
Rule 41    multiplicative_expr -> multiplicative_expr / unary_expr
Rule 42    multiplicative_expr -> multiplicative_expr DOTMUL unary_expr
Rule 43    multiplicative_expr -> multiplicative_expr DOTDIV unary_expr
Rule 44    additive_expr -> multiplicative_expr
Rule 45    additive_expr -> additive_expr + multiplicative_expr
Rule 46    additive_expr -> additive_expr - multiplicative_expr
Rule 47    additive_expr -> additive_expr DOTADD multiplicative_expr
Rule 48    additive_expr -> additive_expr DOTSUB multiplicative_expr
Rule 49    relational_expr -> additive_expr
Rule 50    relational_expr -> relational_expr rel_op additive_expr
Rule 51    equality_expr -> relational_expr
Rule 52    equality_expr -> equality_expr eq_op relational_expr
Rule 53    assignment_expr -> equality_expr
Rule 54    assignment_expr -> unary_expr assignment_op assignment_expr
Rule 55    expr -> assignment_expr
Rule 56    expr -> expr , assignment_expr
Rule 57    expr -> ZEROS ( expr )
Rule 58    expr -> ONES ( expr )
Rule 59    expr -> EYE ( expr )
Rule 60    matrix -> [ outer ]
Rule 61    outer -> outer ; inner
Rule 62    outer -> inner
Rule 63    inner -> inner , elem
Rule 64    inner -> elem
Rule 65    elem -> expr
Rule 66    iterator_assignment -> ID = expr : expr
Rule 67    assignment_op -> =
Rule 68    assignment_op -> ADDASSIGN
Rule 69    assignment_op -> SUBASSIGN
Rule 70    assignment_op -> MULASSIGN
Rule 71    assignment_op -> DIVASSIGN
Rule 72    rel_op -> LT
Rule 73    rel_op -> LE
Rule 74    rel_op -> GT
Rule 75    rel_op -> GE
Rule 76    eq_op -> EQ
Rule 77    eq_op -> NE

Terminals, with rules where they appear

(                    : 17 18 22 23 33 57 58 59
)                    : 17 18 22 23 33 57 58 59
*                    : 40
+                    : 45
,                    : 56 63
-                    : 38 46
/                    : 41
:                    : 66
;                    : 12 13 14 15 16 21 25 26 27 61
=                    : 12 66 67
ADDASSIGN            : 13 68
BREAK                : 25
CONTINUE             : 26
DIVASSIGN            : 16 71
DOTADD               : 47
DOTDIV               : 43
DOTMUL               : 42
DOTSUB               : 48
ELSE                 : 18
EQ                   : 76
EYE                  : 59
FLOATNUM             : 30
FOR                  : 24
GE                   : 75
GT                   : 74
ID                   : 28 66
IF                   : 17 18
INTNUM               : 29
LE                   : 73
LT                   : 72
MULASSIGN            : 15 70
NE                   : 77
ONES                 : 58
PRINT                : 21
RETURN               : 27
SINGLE_QUOTE         : 36
STRING               : 31
SUBASSIGN            : 14 69
WHILE                : 22 23
ZEROS                : 57
[                    : 35 60
]                    : 35 60
error                : 
{                    : 19 20 23
}                    : 19 20

Nonterminals, with rules where they appear

additive_expr        : 45 46 47 48 49 50
assignment_expr      : 54 55 56
assignment_instruction : 6
assignment_op        : 54
compound_instruction : 8
conditional_instruction : 7
elem                 : 63 64
eq_op                : 52
equality_expr        : 52 53
expr                 : 12 13 14 15 16 17 18 21 22 23 33 35 56 57 58 59 65 66 66
inner                : 61 62 63
instruction          : 4 5 17 18 18 22 23 24
instructions         : 2 4 20
instructions_opt     : 1
iteration_instruction : 10
iterator_assignment  : 24
jump_instruction     : 11
matrix               : 32
multiplicative_expr  : 38 40 41 42 43 44 45 46 47 48
outer                : 60 61
postfix_expr         : 35 36 37
primary_expr         : 34
print_instruction    : 9
program              : 0
rel_op               : 50
relational_expr      : 50 51 52
unary_expr           : 12 13 14 15 16 39 40 41 42 43 54

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (2) instructions_opt -> . instructions
    (3) instructions_opt -> .
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (6) instruction -> . assignment_instruction
    (7) instruction -> . conditional_instruction
    (8) instruction -> . compound_instruction
    (9) instruction -> . print_instruction
    (10) instruction -> . iteration_instruction
    (11) instruction -> . jump_instruction
    (12) assignment_instruction -> . unary_expr = expr ;
    (13) assignment_instruction -> . unary_expr ADDASSIGN expr ;
    (14) assignment_instruction -> . unary_expr SUBASSIGN expr ;
    (15) assignment_instruction -> . unary_expr MULASSIGN expr ;
    (16) assignment_instruction -> . unary_expr DIVASSIGN expr ;
    (17) conditional_instruction -> . IF ( expr ) instruction
    (18) conditional_instruction -> . IF ( expr ) instruction ELSE instruction
    (19) compound_instruction -> . { }
    (20) compound_instruction -> . { instructions }
    (21) print_instruction -> . PRINT expr ;
    (22) iteration_instruction -> . WHILE ( expr ) instruction
    (23) iteration_instruction -> . WHILE ( expr ) { instruction
    (24) iteration_instruction -> . FOR iterator_assignment instruction
    (25) jump_instruction -> . BREAK ;
    (26) jump_instruction -> . CONTINUE ;
    (27) jump_instruction -> . RETURN ;
    (37) unary_expr -> . postfix_expr
    (38) unary_expr -> . - multiplicative_expr
    (34) postfix_expr -> . primary_expr
    (35) postfix_expr -> . postfix_expr [ expr ]
    (36) postfix_expr -> . postfix_expr SINGLE_QUOTE
    (28) primary_expr -> . ID
    (29) primary_expr -> . INTNUM
    (30) primary_expr -> . FLOATNUM
    (31) primary_expr -> . STRING
    (32) primary_expr -> . matrix
    (33) primary_expr -> . ( expr )
    (60) matrix -> . [ outer ]

    $end            reduce using rule 3 (instructions_opt -> .)
    IF              shift and go to state 23
    {               shift and go to state 29
    PRINT           shift and go to state 6
    WHILE           shift and go to state 5
    FOR             shift and go to state 19
    BREAK           shift and go to state 26
    CONTINUE        shift and go to state 27
    RETURN          shift and go to state 1
    -               shift and go to state 14
    ID              shift and go to state 22
    INTNUM          shift and go to state 10
    FLOATNUM        shift and go to state 4
    STRING          shift and go to state 8
    (               shift and go to state 13
    [               shift and go to state 21

    iteration_instruction          shift and go to state 18
    unary_expr                     shift and go to state 2
    compound_instruction           shift and go to state 24
    instruction                    shift and go to state 25
    assignment_instruction         shift and go to state 3
    postfix_expr                   shift and go to state 12
    instructions_opt               shift and go to state 20
    program                        shift and go to state 15
    primary_expr                   shift and go to state 9
    jump_instruction               shift and go to state 16
    print_instruction              shift and go to state 28
    conditional_instruction        shift and go to state 7
    matrix                         shift and go to state 11
    instructions                   shift and go to state 17

state 1

    (27) jump_instruction -> RETURN . ;

    ;               shift and go to state 30


state 2

    (12) assignment_instruction -> unary_expr . = expr ;
    (13) assignment_instruction -> unary_expr . ADDASSIGN expr ;
    (14) assignment_instruction -> unary_expr . SUBASSIGN expr ;
    (15) assignment_instruction -> unary_expr . MULASSIGN expr ;
    (16) assignment_instruction -> unary_expr . DIVASSIGN expr ;

    =               shift and go to state 35
    ADDASSIGN       shift and go to state 34
    SUBASSIGN       shift and go to state 31
    MULASSIGN       shift and go to state 33
    DIVASSIGN       shift and go to state 32


state 3

    (6) instruction -> assignment_instruction .

    }               reduce using rule 6 (instruction -> assignment_instruction .)
    IF              reduce using rule 6 (instruction -> assignment_instruction .)
    {               reduce using rule 6 (instruction -> assignment_instruction .)
    PRINT           reduce using rule 6 (instruction -> assignment_instruction .)
    WHILE           reduce using rule 6 (instruction -> assignment_instruction .)
    FOR             reduce using rule 6 (instruction -> assignment_instruction .)
    BREAK           reduce using rule 6 (instruction -> assignment_instruction .)
    CONTINUE        reduce using rule 6 (instruction -> assignment_instruction .)
    RETURN          reduce using rule 6 (instruction -> assignment_instruction .)
    -               reduce using rule 6 (instruction -> assignment_instruction .)
    ID              reduce using rule 6 (instruction -> assignment_instruction .)
    INTNUM          reduce using rule 6 (instruction -> assignment_instruction .)
    FLOATNUM        reduce using rule 6 (instruction -> assignment_instruction .)
    STRING          reduce using rule 6 (instruction -> assignment_instruction .)
    (               reduce using rule 6 (instruction -> assignment_instruction .)
    [               reduce using rule 6 (instruction -> assignment_instruction .)
    $end            reduce using rule 6 (instruction -> assignment_instruction .)
    ELSE            reduce using rule 6 (instruction -> assignment_instruction .)


state 4

    (30) primary_expr -> FLOATNUM .

    [               reduce using rule 30 (primary_expr -> FLOATNUM .)
    SINGLE_QUOTE    reduce using rule 30 (primary_expr -> FLOATNUM .)
    =               reduce using rule 30 (primary_expr -> FLOATNUM .)
    ADDASSIGN       reduce using rule 30 (primary_expr -> FLOATNUM .)
    SUBASSIGN       reduce using rule 30 (primary_expr -> FLOATNUM .)
    MULASSIGN       reduce using rule 30 (primary_expr -> FLOATNUM .)
    DIVASSIGN       reduce using rule 30 (primary_expr -> FLOATNUM .)
    *               reduce using rule 30 (primary_expr -> FLOATNUM .)
    /               reduce using rule 30 (primary_expr -> FLOATNUM .)
    DOTMUL          reduce using rule 30 (primary_expr -> FLOATNUM .)
    DOTDIV          reduce using rule 30 (primary_expr -> FLOATNUM .)
    +               reduce using rule 30 (primary_expr -> FLOATNUM .)
    -               reduce using rule 30 (primary_expr -> FLOATNUM .)
    DOTADD          reduce using rule 30 (primary_expr -> FLOATNUM .)
    DOTSUB          reduce using rule 30 (primary_expr -> FLOATNUM .)
    LT              reduce using rule 30 (primary_expr -> FLOATNUM .)
    LE              reduce using rule 30 (primary_expr -> FLOATNUM .)
    GT              reduce using rule 30 (primary_expr -> FLOATNUM .)
    GE              reduce using rule 30 (primary_expr -> FLOATNUM .)
    EQ              reduce using rule 30 (primary_expr -> FLOATNUM .)
    NE              reduce using rule 30 (primary_expr -> FLOATNUM .)
    ;               reduce using rule 30 (primary_expr -> FLOATNUM .)
    ,               reduce using rule 30 (primary_expr -> FLOATNUM .)
    )               reduce using rule 30 (primary_expr -> FLOATNUM .)
    ]               reduce using rule 30 (primary_expr -> FLOATNUM .)
    :               reduce using rule 30 (primary_expr -> FLOATNUM .)
    IF              reduce using rule 30 (primary_expr -> FLOATNUM .)
    {               reduce using rule 30 (primary_expr -> FLOATNUM .)
    PRINT           reduce using rule 30 (primary_expr -> FLOATNUM .)
    WHILE           reduce using rule 30 (primary_expr -> FLOATNUM .)
    FOR             reduce using rule 30 (primary_expr -> FLOATNUM .)
    BREAK           reduce using rule 30 (primary_expr -> FLOATNUM .)
    CONTINUE        reduce using rule 30 (primary_expr -> FLOATNUM .)
    RETURN          reduce using rule 30 (primary_expr -> FLOATNUM .)
    ID              reduce using rule 30 (primary_expr -> FLOATNUM .)
    INTNUM          reduce using rule 30 (primary_expr -> FLOATNUM .)
    FLOATNUM        reduce using rule 30 (primary_expr -> FLOATNUM .)
    STRING          reduce using rule 30 (primary_expr -> FLOATNUM .)
    (               reduce using rule 30 (primary_expr -> FLOATNUM .)


state 5

    (22) iteration_instruction -> WHILE . ( expr ) instruction
    (23) iteration_instruction -> WHILE . ( expr ) { instruction

    (               shift and go to state 36


state 6

    (21) print_instruction -> PRINT . expr ;
    (55) expr -> . assignment_expr
    (56) expr -> . expr , assignment_expr
    (57) expr -> . ZEROS ( expr )
    (58) expr -> . ONES ( expr )
    (59) expr -> . EYE ( expr )
    (53) assignment_expr -> . equality_expr
    (54) assignment_expr -> . unary_expr assignment_op assignment_expr
    (51) equality_expr -> . relational_expr
    (52) equality_expr -> . equality_expr eq_op relational_expr
    (37) unary_expr -> . postfix_expr
    (38) unary_expr -> . - multiplicative_expr
    (49) relational_expr -> . additive_expr
    (50) relational_expr -> . relational_expr rel_op additive_expr
    (34) postfix_expr -> . primary_expr
    (35) postfix_expr -> . postfix_expr [ expr ]
    (36) postfix_expr -> . postfix_expr SINGLE_QUOTE
    (44) additive_expr -> . multiplicative_expr
    (45) additive_expr -> . additive_expr + multiplicative_expr
    (46) additive_expr -> . additive_expr - multiplicative_expr
    (47) additive_expr -> . additive_expr DOTADD multiplicative_expr
    (48) additive_expr -> . additive_expr DOTSUB multiplicative_expr
    (28) primary_expr -> . ID
    (29) primary_expr -> . INTNUM
    (30) primary_expr -> . FLOATNUM
    (31) primary_expr -> . STRING
    (32) primary_expr -> . matrix
    (33) primary_expr -> . ( expr )
    (39) multiplicative_expr -> . unary_expr
    (40) multiplicative_expr -> . multiplicative_expr * unary_expr
    (41) multiplicative_expr -> . multiplicative_expr / unary_expr
    (42) multiplicative_expr -> . multiplicative_expr DOTMUL unary_expr
    (43) multiplicative_expr -> . multiplicative_expr DOTDIV unary_expr
    (60) matrix -> . [ outer ]

    ZEROS           shift and go to state 43
    ONES            shift and go to state 42
    EYE             shift and go to state 40
    -               shift and go to state 14
    ID              shift and go to state 22
    INTNUM          shift and go to state 10
    FLOATNUM        shift and go to state 4
    STRING          shift and go to state 8
    (               shift and go to state 13
    [               shift and go to state 21

    additive_expr                  shift and go to state 45
    matrix                         shift and go to state 11
    unary_expr                     shift and go to state 37
    relational_expr                shift and go to state 41
    expr                           shift and go to state 44
    equality_expr                  shift and go to state 38
    postfix_expr                   shift and go to state 12
    multiplicative_expr            shift and go to state 39
    primary_expr                   shift and go to state 9
    assignment_expr                shift and go to state 46

state 7

    (7) instruction -> conditional_instruction .

    }               reduce using rule 7 (instruction -> conditional_instruction .)
    IF              reduce using rule 7 (instruction -> conditional_instruction .)
    {               reduce using rule 7 (instruction -> conditional_instruction .)
    PRINT           reduce using rule 7 (instruction -> conditional_instruction .)
    WHILE           reduce using rule 7 (instruction -> conditional_instruction .)
    FOR             reduce using rule 7 (instruction -> conditional_instruction .)
    BREAK           reduce using rule 7 (instruction -> conditional_instruction .)
    CONTINUE        reduce using rule 7 (instruction -> conditional_instruction .)
    RETURN          reduce using rule 7 (instruction -> conditional_instruction .)
    -               reduce using rule 7 (instruction -> conditional_instruction .)
    ID              reduce using rule 7 (instruction -> conditional_instruction .)
    INTNUM          reduce using rule 7 (instruction -> conditional_instruction .)
    FLOATNUM        reduce using rule 7 (instruction -> conditional_instruction .)
    STRING          reduce using rule 7 (instruction -> conditional_instruction .)
    (               reduce using rule 7 (instruction -> conditional_instruction .)
    [               reduce using rule 7 (instruction -> conditional_instruction .)
    $end            reduce using rule 7 (instruction -> conditional_instruction .)
    ELSE            reduce using rule 7 (instruction -> conditional_instruction .)


state 8

    (31) primary_expr -> STRING .

    [               reduce using rule 31 (primary_expr -> STRING .)
    SINGLE_QUOTE    reduce using rule 31 (primary_expr -> STRING .)
    =               reduce using rule 31 (primary_expr -> STRING .)
    ADDASSIGN       reduce using rule 31 (primary_expr -> STRING .)
    SUBASSIGN       reduce using rule 31 (primary_expr -> STRING .)
    MULASSIGN       reduce using rule 31 (primary_expr -> STRING .)
    DIVASSIGN       reduce using rule 31 (primary_expr -> STRING .)
    *               reduce using rule 31 (primary_expr -> STRING .)
    /               reduce using rule 31 (primary_expr -> STRING .)
    DOTMUL          reduce using rule 31 (primary_expr -> STRING .)
    DOTDIV          reduce using rule 31 (primary_expr -> STRING .)
    +               reduce using rule 31 (primary_expr -> STRING .)
    -               reduce using rule 31 (primary_expr -> STRING .)
    DOTADD          reduce using rule 31 (primary_expr -> STRING .)
    DOTSUB          reduce using rule 31 (primary_expr -> STRING .)
    LT              reduce using rule 31 (primary_expr -> STRING .)
    LE              reduce using rule 31 (primary_expr -> STRING .)
    GT              reduce using rule 31 (primary_expr -> STRING .)
    GE              reduce using rule 31 (primary_expr -> STRING .)
    EQ              reduce using rule 31 (primary_expr -> STRING .)
    NE              reduce using rule 31 (primary_expr -> STRING .)
    ;               reduce using rule 31 (primary_expr -> STRING .)
    ,               reduce using rule 31 (primary_expr -> STRING .)
    )               reduce using rule 31 (primary_expr -> STRING .)
    ]               reduce using rule 31 (primary_expr -> STRING .)
    :               reduce using rule 31 (primary_expr -> STRING .)
    IF              reduce using rule 31 (primary_expr -> STRING .)
    {               reduce using rule 31 (primary_expr -> STRING .)
    PRINT           reduce using rule 31 (primary_expr -> STRING .)
    WHILE           reduce using rule 31 (primary_expr -> STRING .)
    FOR             reduce using rule 31 (primary_expr -> STRING .)
    BREAK           reduce using rule 31 (primary_expr -> STRING .)
    CONTINUE        reduce using rule 31 (primary_expr -> STRING .)
    RETURN          reduce using rule 31 (primary_expr -> STRING .)
    ID              reduce using rule 31 (primary_expr -> STRING .)
    INTNUM          reduce using rule 31 (primary_expr -> STRING .)
    FLOATNUM        reduce using rule 31 (primary_expr -> STRING .)
    STRING          reduce using rule 31 (primary_expr -> STRING .)
    (               reduce using rule 31 (primary_expr -> STRING .)


state 9

    (34) postfix_expr -> primary_expr .

    [               reduce using rule 34 (postfix_expr -> primary_expr .)
    SINGLE_QUOTE    reduce using rule 34 (postfix_expr -> primary_expr .)
    *               reduce using rule 34 (postfix_expr -> primary_expr .)
    /               reduce using rule 34 (postfix_expr -> primary_expr .)
    DOTMUL          reduce using rule 34 (postfix_expr -> primary_expr .)
    DOTDIV          reduce using rule 34 (postfix_expr -> primary_expr .)
    +               reduce using rule 34 (postfix_expr -> primary_expr .)
    -               reduce using rule 34 (postfix_expr -> primary_expr .)
    DOTADD          reduce using rule 34 (postfix_expr -> primary_expr .)
    DOTSUB          reduce using rule 34 (postfix_expr -> primary_expr .)
    LT              reduce using rule 34 (postfix_expr -> primary_expr .)
    LE              reduce using rule 34 (postfix_expr -> primary_expr .)
    GT              reduce using rule 34 (postfix_expr -> primary_expr .)
    GE              reduce using rule 34 (postfix_expr -> primary_expr .)
    EQ              reduce using rule 34 (postfix_expr -> primary_expr .)
    NE              reduce using rule 34 (postfix_expr -> primary_expr .)
    ;               reduce using rule 34 (postfix_expr -> primary_expr .)
    ,               reduce using rule 34 (postfix_expr -> primary_expr .)
    )               reduce using rule 34 (postfix_expr -> primary_expr .)
    ]               reduce using rule 34 (postfix_expr -> primary_expr .)
    :               reduce using rule 34 (postfix_expr -> primary_expr .)
    IF              reduce using rule 34 (postfix_expr -> primary_expr .)
    {               reduce using rule 34 (postfix_expr -> primary_expr .)
    PRINT           reduce using rule 34 (postfix_expr -> primary_expr .)
    WHILE           reduce using rule 34 (postfix_expr -> primary_expr .)
    FOR             reduce using rule 34 (postfix_expr -> primary_expr .)
    BREAK           reduce using rule 34 (postfix_expr -> primary_expr .)
    CONTINUE        reduce using rule 34 (postfix_expr -> primary_expr .)
    RETURN          reduce using rule 34 (postfix_expr -> primary_expr .)
    ID              reduce using rule 34 (postfix_expr -> primary_expr .)
    INTNUM          reduce using rule 34 (postfix_expr -> primary_expr .)
    FLOATNUM        reduce using rule 34 (postfix_expr -> primary_expr .)
    STRING          reduce using rule 34 (postfix_expr -> primary_expr .)
    (               reduce using rule 34 (postfix_expr -> primary_expr .)
    =               reduce using rule 34 (postfix_expr -> primary_expr .)
    ADDASSIGN       reduce using rule 34 (postfix_expr -> primary_expr .)
    SUBASSIGN       reduce using rule 34 (postfix_expr -> primary_expr .)
    MULASSIGN       reduce using rule 34 (postfix_expr -> primary_expr .)
    DIVASSIGN       reduce using rule 34 (postfix_expr -> primary_expr .)


state 10

    (29) primary_expr -> INTNUM .
